--- a/app/views/cookies_eu/_cookies_eu.html.erb
+++ b/app/views/cookies_eu/_cookies_eu.html.erb
@@ -1,11 +1,16 @@
 <% if cookies['cookie_eu_consented'] != 'true' %>
   <div class="cookies-eu" data-position="fixed">
-    <span class="cookies-eu-content-holder"><%= t('cookies_eu.cookies_text') %></span>
+    <span class="cookies-eu-content-holder">
+      <% if defined?(cookies_text).present? %>
+        <%= cookies_text %>
+      <% else %>
+        <%= t('cookies_eu.cookies_text') %>
+      <% end %>
+    </span>
     <span class="cookies-eu-button-holder">
-    <button class="cookies-eu-ok"> <%= t('cookies_eu.ok') %> </button>
-    <% if defined?(link).present? %>
-      <a href="<%= link %>" class="cookies-eu-link"> <%= t('cookies_eu.learn_more') %> </a>
-    <% end %>
+      <% if defined?(link).present? %>
+        <a href="<%= link %>" class="cookies-eu-link"> <%= t('cookies_eu.learn_more') %> </a>
+      <% end %>
     </span>
   </div>
 <% end %>
